[gd_scene load_steps=14 format=3 uid="uid://bc5adj2511tnu"]

[ext_resource type="Script" path="res://dialog_balloon/balloon.gd" id="1_4u26j"]
[ext_resource type="PackedScene" uid="uid://ckvgyvclnwggo" path="res://addons/dialogue_manager/dialogue_label.tscn" id="2_a8ve6"]
[ext_resource type="Texture2D" uid="uid://rf17eue30xxp" path="res://Sprites/UI/Dialogue Box.png" id="2_bq6v5"]
[ext_resource type="Texture2D" uid="uid://c0j821yxo4a6n" path="res://Sprites/UI/Portrait Container Left.png" id="2_j3x8f"]
[ext_resource type="Script" path="res://addons/dialogue_manager/dialogue_reponses_menu.gd" id="3_72ixx"]
[ext_resource type="Texture2D" uid="uid://dp5570w5kx0ve" path="res://Sprites/UI/Name Container.png" id="3_fp166"]
[ext_resource type="Texture2D" uid="uid://btmap46njjcr" path="res://Sprites/UI/Portrait Container Right.png" id="4_514dc"]
[ext_resource type="FontFile" uid="uid://v4qs8ufergem" path="res://Kenney Mini Square.ttf" id="4_nkv70"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_spyqn"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.329412, 0.329412, 0.329412, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ri4m3"]
bg_color = Color(0.121569, 0.121569, 0.121569, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_e0njw"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.6, 0.6, 0.6, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_uy0d5"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="Theme" id="Theme_qq3yp"]
default_font_size = 20
Button/styles/disabled = SubResource("StyleBoxFlat_spyqn")
Button/styles/focus = SubResource("StyleBoxFlat_ri4m3")
Button/styles/hover = SubResource("StyleBoxFlat_e0njw")
Button/styles/normal = SubResource("StyleBoxFlat_e0njw")
MarginContainer/constants/margin_bottom = 30
MarginContainer/constants/margin_left = 30
MarginContainer/constants/margin_right = 30
MarginContainer/constants/margin_top = 30
Panel/styles/panel = SubResource("StyleBoxFlat_uy0d5")

[node name="ExampleBalloon" type="CanvasLayer"]
layer = 100
script = ExtResource("1_4u26j")

[node name="LeftPortrait" type="TextureRect" parent="."]
unique_name_in_owner = true
offset_top = 187.0
offset_right = 226.0
offset_bottom = 433.0
texture = ExtResource("2_j3x8f")

[node name="LeftNameplate" type="TextureRect" parent="LeftPortrait"]
unique_name_in_owner = true
layout_mode = 0
offset_top = 246.0
offset_right = 223.0
offset_bottom = 286.0
texture = ExtResource("3_fp166")

[node name="LeftCharacterLabel" type="Label" parent="LeftPortrait/LeftNameplate"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 15.0
offset_top = 5.0
offset_right = 211.0
offset_bottom = 34.0
theme_override_colors/font_color = Color(0.188235, 1, 1, 1)
theme_override_fonts/font = ExtResource("4_nkv70")
text = "Character"
horizontal_alignment = 1
vertical_alignment = 1

[node name="RightPortrait" type="TextureRect" parent="."]
unique_name_in_owner = true
offset_left = 925.0
offset_top = 187.0
offset_right = 1151.0
offset_bottom = 433.0
texture = ExtResource("4_514dc")

[node name="RightNameplate" type="TextureRect" parent="RightPortrait"]
unique_name_in_owner = true
layout_mode = 0
offset_top = 246.0
offset_right = 223.0
offset_bottom = 286.0
texture = ExtResource("3_fp166")

[node name="RightCharacterLabel" type="Label" parent="RightPortrait/RightNameplate"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 15.0
offset_top = 5.0
offset_right = 211.0
offset_bottom = 34.0
theme_override_colors/font_color = Color(0.188235, 1, 1, 1)
theme_override_fonts/font = ExtResource("4_nkv70")
text = "Character"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Balloon" type="TextureRect" parent="."]
unique_name_in_owner = true
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 21.0
offset_top = -183.0
offset_right = -19.0
offset_bottom = -19.0
grow_horizontal = 2
grow_vertical = 0
theme = SubResource("Theme_qq3yp")
texture = ExtResource("2_bq6v5")

[node name="Dialogue" type="MarginContainer" parent="Balloon"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 38.0
offset_right = 38.0
offset_bottom = 46.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Balloon/Dialogue"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="VBoxContainer" type="VBoxContainer" parent="Balloon/Dialogue/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="CharacterLabel" type="RichTextLabel" parent="Balloon/Dialogue/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
visible = false
modulate = Color(1, 1, 1, 0.501961)
layout_mode = 2
mouse_filter = 1
bbcode_enabled = true
text = "Character"
fit_content = true
scroll_active = false

[node name="DialogueLabel" parent="Balloon/Dialogue/HBoxContainer/VBoxContainer" instance=ExtResource("2_a8ve6")]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/default_color = Color(0.188235, 1, 1, 1)
theme_override_fonts/normal_font = ExtResource("4_nkv70")
text = "Dialogue..."

[node name="Responses" type="MarginContainer" parent="Balloon"]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.226
anchor_top = 0.166
anchor_right = 0.961
anchor_bottom = 0.168
offset_left = -3.31201
offset_top = -404.224
offset_right = -0.63208
offset_bottom = -0.552
grow_horizontal = 2
grow_vertical = 2

[node name="ResponsesMenu" type="VBoxContainer" parent="Balloon/Responses" node_paths=PackedStringArray("response_template")]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 8
theme_override_constants/separation = 2
script = ExtResource("3_72ixx")
response_template = NodePath("ResponseExample")

[node name="ResponseExample" type="Button" parent="Balloon/Responses/ResponsesMenu"]
layout_mode = 2
text = "Response example"

[connection signal="gui_input" from="Balloon" to="." method="_on_balloon_gui_input"]
[connection signal="response_selected" from="Balloon/Responses/ResponsesMenu" to="." method="_on_responses_menu_response_selected"]
